# syncat

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  colours.syncat  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: release.yaml  rust.yml
base/: c.syncat  cpp.syncat  css.syncat  haskell.syncat  hs.syncat  html.syncat  java.syncat  javascript.syncat  js.syncat  json.syncat  jsx.syncat  md.syncat  paper.syncat  python.syncat  rb.syncat  regex.syncat  rs.syncat  rust.syncat  scala.syncat  sh.syncat  sql.syncat  syncat.syncat  test.syncat
base_noitalic/: c.syncat  haskell.syncat  javascript.syncat  kotlin.syncat  python.syncat  typescript.syncat
config/style/base/: .syncat  c.syncat  graphql.syncat  html.syncat  kotlin.syncat  prolog.syncat  swift.syncat  syncat_stylesheet.syncat  toml.syncat
config/style/base_noitalic/: bash.syncat  css.syncat  graphql.syncat  html.syncat  java.syncat  paper.syncat  prolog.syncat  python.syncat  ruby.syncat  rust.syncat
config/style/onelight/: .syncat  colours.syncat
onedark/: .syncat  README.md  c.syncat  colours.syncat  css.syncat  hs.syncat  html.syncat  java.syncat  js.syncat  json.syncat  md.syncat  paper.syncat  rb.syncat  rs.syncat  scala.syncat  sh.syncat  syncat.syncat
onelight/: README.md  c.syncat  corpus.syncat  css.syncat  hs.syncat  html.syncat  java.syncat  js.syncat  json.syncat  paper.syncat  rb.syncat  regex.syncat  rs.syncat  scala.syncat  sh.syncat  syncat.syncat  toml.syncat
panda/: .syncat  README.md  c.syncat  colours.syncat  css.syncat  hs.syncat  html.syncat  java.syncat  js.syncat  json.syncat  paper.syncat  rb.syncat  regex.syncat  rs.syncat  scala.syncat  sh.syncat  syncat.syncat  toml.syncat
src/: colorize.rs  dirs.rs  error.rs  language.rs  line.rs  main.rs  meta.rs  style.rs  stylesheet.rs
src/colorize/: mod.rs  source.rs  tree.rs
src/filter/: frame.rs  git.rs  line_endings.rs  line_numbers.rs  margin.rs  mod.rs  squeeze_blank_lines.rs
src/stylesheet/: mod.rs  parser.rs  resolver.rs
syncat/: Cargo.toml  build.rs  package-lock.json  package.json  tree-sitter-syncat-stylesheet
syncat-stylesheet/: Cargo.toml  README.md  build.rs  package-lock.json  package.json
syncat-stylesheet/src/: error.rs  lib.rs  parser.rs  resolver.rs  style.rs
syncat-stylesheet/src/ast/: color.rs  declaration.rs  helper.rs  import.rs  mod.rs  node.rs  node_kind.rs  node_modifier.rs  rule.rs  scope.rs  selector.rs  selector_modifier.rs  style.rs  stylesheet.rs  value.rs  variable.rs
syncat-stylesheet/src/style/: mod.rs  value.rs
syncat-stylesheet/src/stylesheet/: matches.rs  mod.rs  query.rs
syncat/config/: .gitignore  languages.toml
syncat/config/style/active/: hcl.syncat  python.syncat  scala.syncat  sql.syncat  swift.syncat  syncat_stylesheet.syncat  yaml.syncat
syncat/src/: config.rs  dirs.rs  error.rs  language.rs  line.rs  main.rs  meta.rs  meta_stylesheet.rs  opts.rs  package_manager.rs
syncat/src/colorize/: mod.rs  sexp.rs  source.rs  tree.rs
syncat/src/config/: error.rs  mod.rs
syncat/src/filter/: frame.rs  git.rs  line_endings.rs  line_numbers.rs  mod.rs  squeeze_blank_lines.rs
tree-sitter-syncat-stylesheet/: Cargo.toml  binding.gyp  grammar.js  index.js  package-lock.json  package.json
tree-sitter-syncat-stylesheet/bindings/node/: binding.cc  index.js
tree-sitter-syncat-stylesheet/bindings/rust/: lib.rs
tree-sitter-syncat-stylesheet/corpus/: also  any-child  branch-check  comments  complex-kind  comprehensive  direct-child-specifier  exact  exact-sibling  groups  important-styles  imports  multiple-selectors  named-groups  negative-node  no-children  no-inherit  sibling  simple-kind  single-kind  specifier  style-types  styled-kind  token-pattern  token_pattern  tokens  variables  weird-kind  weird-style
tree-sitter-syncat-stylesheet/src/: grammar.json  node-types.json  parser.c
