[package]
name = "syncat"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
edition = "2018"

[dependencies]
tree-sitter = "0.3"
ansi_term = "0.11"
structopt = "0.2"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.1"
cc = "1.0"
