[package]
name = "syncat-stylesheet"
description = "Parser for Syncat Stylesheets."
homepage = "https://github.com/foxfriends/syncat"
repository = "https://github.com/foxfriends/syncat"
version = "2.2.1"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
license = "MIT"
edition = "2018"

[build-dependencies]
cc = "1.0"

[dependencies]
ansi_term = { version = "0.12", optional = true }
hex = "0.4"
regex = "1.5"
tree-sitter = "0.19"
enquote = "1.0"
