[package]
name = "syncat-stylesheet"
description = "Parser for Syncat Stylesheets."
homepage = "https://github.com/foxfriends/syncat"
repository = "https://github.com/foxfriends/syncat"
version = "3.6.0"
authors = ["Cameron Eldridge <cam.eldridge@gmail.com>"]
license = "MIT"
edition = "2024"

[build-dependencies]
cc = "1.0"

[dependencies]
ansi_term = { version = "0.12", optional = true }
hex = "0.4"
regex = "1.5"
tree-sitter = "0.25"
enquote = "1.0"
