[package]
description = "Syntax aware cat"
repository = "https://github.com/foxfriends/syncat"
keywords = ["cli", "syntax", "cat", "highlighting"]
readme = "../README.md"
license = "MIT"
homepage = "https://github.com/foxfriends/syncat"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
edition = "2018"
name = "syncat"
version = "2.0.0"

[dependencies]
ansi_term = "0.12"
directories = "2.0"
git2 = "0.13"
hex = "0.4"
lazy_static = "1.4"
regex = "1.3"
structopt = { version = "0.3", features = ["paw"] }
terminal_size = "0.1"
tree-sitter = "0.6"
console = "0.9"
syncat-stylesheet = { path = "../syncat-stylesheet", features = ["ansi_term"] }
toml = "0.5"
paw = "1.0"
rayon = "1.3"
libloading = "0.5"
cc = "1.0"
serde = { version = "1.0", features = ["derive"] }
