[package]
description = "Syntax aware cat"
repository = "https://github.com/foxfriends/syncat"
keywords = ["cli", "syntax", "cat", "highlighting"]
readme = "../README.md"
license = "MIT"
homepage = "https://github.com/foxfriends/syncat"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
edition = "2018"
name = "syncat"
version = "3.1.1"
categories = ["command-line-utilities"]

[dependencies]
ansi_term = "0.12.1"
directories = "2.0.2"
git2 = "0.13.0"
hex = "0.4.2"
lazy_static = "1.4.0"
regex = "1.3.6"
structopt = { version = "0.3.12", features = ["paw"] }
terminal_size = "0.1.10"
tree-sitter = "0.6.3"
console = "0.10.0"
syncat-stylesheet = { version = "2.2.0", features = ["ansi_term"] }
toml = "0.5.6"
paw = "1.0.0"
rayon = "1.3.0"
libloading = "0.5.2"
cc = "1.0.50"
serde = { version = "1.0.105", features = ["derive"] }
tempdir = "0.3.7"
