[package]
description = "Syntax aware cat"
repository = "https://github.com/foxfriends/syncat"
keywords = ["cli", "syntax", "cat", "highlighting"]
readme = "../README.md"
license = "MIT"
homepage = "https://github.com/foxfriends/syncat"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
edition = "2018"
name = "syncat"
version = "3.6.1"
categories = ["command-line-utilities"]

[features]
default = []
vendored-openssl = ["git2/vendored-openssl"]
vendored-libgit2 = ["git2/vendored-libgit2"]

[dependencies]
ansi_term = "0.12.1"
directories = "2.0.2"
git2 = "0.16.1"
hex = "0.4.2"
lazy_static = "1.4.0"
regex = "1.5.5"
terminal_size = "0.1.10"
tree-sitter = "0.20.10"
console = "0.10.0"
syncat-stylesheet = { version = "3.5.0", features = ["ansi_term"] } # { path = "../syncat-stylesheet/", features = ["ansi_term"] }
toml = "0.5.6"
libloading = "0.5.2"
cc = "1.0.50"
serde = { version = "1.0.105", features = ["derive"] }
tempdir = "0.3.7"
clap = { version = "4.4.6", features = ["derive"] }
tar = "0.4.40"

[build-dependencies]
tar = "0.4.40"
