[package]
name = "tree-sitter-syncat-stylesheet"
description = "syncat-stylesheet grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "syncat-stylesheet"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-syncat-stylesheet"
edition = "2024"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
